# qaguru_homeworks

./: .gitignore  Makefile  README.md  pep_20.py  pyproject.toml  pytest.ini  requirements.txt
hw_2/: .gitignore  README.md  main.py
hw_3/: codefix.py
hw_3/test/: test_github.py  test_selenium.py
hw_5/: README.md
hw_6/: README.md  main.py  pyproject.toml
hw_8/: README.md  example.py  main.py  pyproject.toml
hw_8/src/: email.py  email_address.py  service.py  utils.py
hw_8/tests/: test_email_system.py
test/: test.py  test_github.py  test_google.py  test_selenium.py  test_selenium_github.py  test_selenium_google.py
