[tool.poetry]
name = "qaguru-hw-4"
version = "0.1.0"
description = "QA GURU homework 4"
authors = ["Gran <awebdeff@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "25.9.0"
isort = "7.0.0"
flake8 = "7.3.0"
pre-commit = "4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ['py312']
exclude = '''
/(
      .git/
    | .venv/
    | venv/
    | env/
    | __pycache__/
    | allure-results
    | allure-report
    | .pytest_cache
    | .vscode
    | pytest.ini
    | requirements.txt
    | \.git
    | \.venv
    | venv
    | env
    | __pycache__
    | allure-results
    | allure-report
    | \.pytest_cache
    | \.vscode
    | pytest\.ini
    | requirements\.txt
    | site-packages
)/
'''

[tool.isort]
profile = "black"
line_length = 90
skip = [
    ".git",
    ".venv",
    "venv",
    "env",
    "__pycache__",
    "allure-results",
    "allure-report",
    ".pytest_cache",
    ".vscode",
    "pytest.ini",
    "requirements.txt"
]
